--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,14 @@ flutter:
   assets:
     - assets/images/
     - assets/images/geosme-logo-light.png
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
