--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,31 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Maps and Location
+  google_maps_flutter: ^2.5.3
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+
+  # Charts and Analytics
+  fl_chart: ^0.66.0
+
+  # State Management
+  provider: ^6.1.1
+
+  # HTTP and API
+  http: ^1.1.0
+
+  # Local Storage
+  shared_preferences: ^2.2.2
+
+  # UI Components
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
+
+  # Utilities
+  intl: ^0.19.0
+  url_launcher: ^6.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
